# junjo-ai-studio

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .gitleaksignore  AGENTS.md  CLEANUP_PLAN.md  E2E_TEST_PLAN.md  INGESTION.md  INGESTION_RUST.md  METADATA_REFACTOR.md  PROD_CONFIG_PLAN.md  PROD_CONFIG_PLAN_B.md  PROTO_VERSIONS.md  README.md  REFACTOR_V4_ARCHITECTURE.md  REFACTOR_V4_PLAN.md  REFACTOR_V4_PLAN_001_WAL.md  REFACTOR_V4_PLAN_002_PARQUET_FLUSH.md  REFACTOR_V4_PLAN_003_PARQUET_INDEXER.md  REFACTOR_V4_SIMPLIFY_PLAN.md  TESTING.md  docker-compose.monitoring.yml  docker-compose.yml  run-all-proto-gen.sh  run-all-tests.sh
.claude/commands/: prepare-refactor-v4.md  prepare.md
.github/workflows/: backend-tests.yml  docker-publish.yml  proto-staleness-check.yml  rest-api-contract-validation.yml  schema-validation.yml  validate-proto.yml  version-sync-check.yml
backend/: .gitignore  Dockerfile  ENV_VAR_AUDIT_REPORT.md  README.md  conftest.py  entrypoint.sh  pyproject.toml
backend/app/: grpc_server.py  main.py
backend/migrations/: env.py
backend/scripts/: README_SCHEMA_VALIDATION.md  ci_validate_schemas.sh  export_openapi_schema.py  generate_proto.sh  run-backend-tests.sh  validate_frontend_schemas.py  validate_rest_api_contracts.sh
backend/tests/: TEST_COVERAGE_PLAN.md  conftest.py  test_datafusion_query.py  test_flush_index_bridge_integration.py  test_flush_wal_integration.py  test_has_llm_genai_xai_integration.py  (+7 more)
frontend/: Dockerfile  index.html  package-lock.json  package.json  prod-startup.sh  vite-junjo-plugin.ts  vitest.config.ts
ingestion/: .air.toml  Cargo.toml  Dockerfile  Makefile  README.md  build.rs  go.mod  go.sum  main.go
ingestion-rust/: Cargo.toml  Dockerfile  build.rs
ingestion-rust/adr/: 001-segmented-wal-architecture.md
ingestion-rust/proto/: auth.proto
ingestion-rust/src/: config.rs  main.rs
ingestion-rust/src/backend/: client.rs
ingestion-rust/src/backend_client/: mod.rs
ingestion-rust/src/proto/: ingestion.rs  mod.rs  opentelemetry.proto.trace.v1.rs  span_data_container.rs
ingestion-rust/src/server/: auth.rs  internal_service.rs  mod.rs  trace_service.rs
ingestion-rust/src/storage/: mod.rs  repository.rs  span_record.rs
ingestion-service/: Dockerfile  main.go
proto/: README.md  auth.proto  ingestion.proto  span_data_container.proto
scripts/: check-version-sync.sh  install-git-hooks.sh  pre-commit.sh  sync-version.sh
(+202 files in other folders)
