[package]
name = "junjo-ingestion"
version = "0.1.0"
edition = "2021"
description = "High-throughput OpenTelemetry ingestion service using fjall"
authors = ["Junjo AI"]

[dependencies]
# Async runtime
tokio = { version = "1.48", features = ["full", "sync", "time", "signal"] }
tokio-stream = "0.1.17"

# gRPC
tonic = { version = "0.14", features = ["gzip"] }
tonic-prost = "0.14"
tonic-health = "0.14"
prost = "0.14"
prost-types = "0.14"

# Storage - fjall LSM-tree key-value store
fjall = "2.11"

# Arrow/Parquet for columnar storage and data transfer
arrow = { version = "57", features = ["ipc"] }
parquet = { version = "57", features = ["zstd"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Caching for API key validation
moka = { version = "0.12", features = ["future"] }

# Logging/tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# Utils
ulid = "1.2"
chrono = { version = "0.4", features = ["serde"] }
bytes = "1.11"
hex = "0.4"
rand = "0.9"
thiserror = "2.0"
anyhow = "1.0"

[build-dependencies]
tonic-prost-build = "0.14"
